objects/Lead.object
<CustomObject>
    <fields>
        <fullName>UPC_Score_Stars_Text__c</fullName>
        <description>Used in Reports and Dashboards</description>
        <formula>CASE( (CASE( ROUND( leadScoring__Total_Lead_Score__c /10,1), 
-0.5,0, 
-1,0, 
-1.5,0, 
0,0, 
0.1,1, 
0.2,1, 
0.3,1, 
0.4,1, 
0.5,1, 
0.6,1, 
0.7,1, 
0.8,1, 
0.9,1, 
1,1, 
1.1,2, 
1.2,2, 
1.3,2, 
1.4,2, 
1.5,2, 
1.6,2, 
1.7,2, 
1.8,2, 
1.9,2, 
2,2, 
2.1,3, 
2.2,3, 
2.3,3, 
2.4,3, 
2.5,3, 
2.6,3, 
2.7,3, 
2.8,3, 
2.9,3, 
3,3, 
3.1,4, 
3.2,4, 
3.3,4, 
3.4,4, 
3.5,4, 
3.6,4, 
3.7,4, 
3.8,4, 
3.9,4, 
4,4, 
4.1,5, 
4.2,5, 
4.3,5, 
4.4,5, 
4.5,5, 
4.6,5, 
4.7,5, 
4.8,5, 
4.9,5, 
5,5, 
0 
)) 








,
0,&quot;0 Stars&quot;,
1,&quot;1 Stars&quot;,
2,&quot;2 Stars&quot;,
3,&quot;3 Stars&quot;,
4,&quot;4 Stars&quot;,
5,&quot;5 Stars&quot;,
&quot;0 Stars&quot;)</formula>
        <label>Score Stars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Score_stars__c</fullName>
        <description>Field created by Nexell, the lead score ranks determine the number of stars appearing</description>
        <formula>CASE( (CASE( ROUND( leadScoring__Total_Lead_Score__c  /10,1), 
-0.5,0, 
-1,0, 
-1.5,0, 
0,0, 
0.1,1, 
0.2,1, 
0.3,1, 
0.4,1, 
0.5,1, 
0.6,1, 
0.7,1, 
0.8,1, 
0.9,1, 
1,1, 
1.1,2, 
1.2,2, 
1.3,2, 
1.4,2, 
1.5,2, 
1.6,2, 
1.7,2, 
1.8,2, 
1.9,2, 
2,2, 
2.1,3, 
2.2,3, 
2.3,3, 
2.4,3, 
2.5,3, 
2.6,3, 
2.7,3, 
2.8,3, 
2.9,3, 
3,3, 
3.1,4, 
3.2,4, 
3.3,4, 
3.4,4, 
3.5,4, 
3.6,4, 
3.7,4, 
3.8,4, 
3.9,4, 
4,4, 
4.1,5, 
4.2,5, 
4.3,5, 
4.4,5, 
4.5,5, 
4.6,5, 
4.7,5, 
4.8,5, 
4.9,5, 
5,5, 
0 
)) 








,
0,IMAGE(&apos;/resource/fzerostar&apos;,&apos;f&apos;,20,100),
1,IMAGE(&apos;/resource/eonestar&apos;,&apos;e&apos;,20,100),
2,IMAGE(&apos;/resource/dtwostars&apos;,&apos;d&apos;,20,100),
3,IMAGE(&apos;/resource/cthreestars&apos;,&apos;c&apos;,20,100),
4,IMAGE(&apos;/resource/bfourstars&apos;,&apos;b&apos;,20,100),
5,IMAGE(&apos;/resource/afivestars&apos;,&apos;a&apos;,20,100),
IMAGE(&apos;/resource/eonestar&apos;,&apos;e&apos;,20,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score stars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Source__c</fullName>
        <formula>CASE(  LeadSource  , 
&quot;Web&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIbh&apos;,&apos;Web&apos;,22,22), 
&quot;Abandoned Shopping Basket&quot;, IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIat&apos;,&apos;Basket&apos;,22,22),
&quot;Phone inquiry&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIbN&apos;,&apos;Phone&apos;,22,22),
&quot;Partner referral&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIbD&apos;,&apos;Partner&apos;,22,22),
&quot;Purchased List&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIaj&apos;,&apos;List&apos;,22,22),
&quot;KAM&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIbS&apos;,&apos;KAM&apos;,22,22),
&quot;Other&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIao&apos;,&apos;Other&apos;,22,22),
IMAGE(&apos;/servlet/servlet.FileDownload?file=0151q000000DIao&apos;,&apos;Other&apos;,22,22))</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Title_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if title is present</description>
        <formula>NOT(ISBLANK( Title ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_UID__c</fullName>
        <description>Field created by Nexell and used to track UID number</description>
        <inlineHelpText>Please use this format: CHE-000.000.000</inlineHelpText>
        <label>UID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_UID_given__c</fullName>
        <description>Field created by Nexell, the checkbox is ticked if UID reference is present</description>
        <formula>NOT(ISBLANK( UPC_UID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UID given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ULL CU Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Download__c</fullName>
        <label>ULL CU Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Upload__c</fullName>
        <label>ULL CU Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Website_given__c</fullName>
        <formula>NOT(ISBLANK( Website ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Check_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPC Zefix Check Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Legal_Seat__c</fullName>
        <label>UPC Zefix Legal Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Zefix registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Share_Capital__c</fullName>
        <label>Zefix Share Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Status__c</fullName>
        <label>Zefix Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>beingCancelled</fullName>
                    <label>Being Cancelled</label>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                    <label>Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Zefix_Verified__c</fullName>
        <formula>IF( CONTAINS($Profile.Name, &quot;Partner&quot;), 

IF(ISNULL(  UPC_Last_Zefix_Update__c  ), 
IMAGE(&apos;/Partner/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IF(AND(NOT(ISNULL( UPC_Last_Zefix_Update__c )), UPC_Zefix_Not_Found__c ), 
IMAGE(&apos;/Partner/resource/1536831026000/Alert_Icon&apos;,&apos;Alert&apos;,20,20), 
IMAGE(&apos;/Partner/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20) 
)),
IF(ISNULL(  UPC_Last_Zefix_Update__c  ), 
IMAGE(&apos;/resource/1536830994000/Unavailable_Icon&apos;,&apos;Red&apos;,20,20), 
IF(AND(NOT(ISNULL( UPC_Last_Zefix_Update__c )), UPC_Zefix_Not_Found__c ), 
IMAGE(&apos;/resource/1536831026000/Alert_Icon&apos;,&apos;Alert&apos;,20,20), 
IMAGE(&apos;/resource/1536830928000/Available_Icon&apos;,&apos;Green&apos;,20,20) 
))
)</formula>
        <label>Zefix Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Sum of all the lead scoring rules from campaign member lead scoring rules</description>
        <inlineHelpText>Sum of all the lead scoring rules from campaign member lead scoring rules</inlineHelpText>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Priority__c</fullName>
        <formula>if( leadScoring__Total_Lead_Score__c &lt;30,&quot;C&quot;,if(leadScoring__Total_Lead_Score__c &lt;50, &quot;B&quot;, &quot;A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Sum of Campaign Score and Lead Score</description>
        <formula>leadScoring__Campaign_Score__c  +leadScoring__Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Campaign Score and Lead Score</inlineHelpText>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>leadScoring__Total_Lead_Score__c</columns>
        <columns>UPC_Score_stars__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Inbound_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Inbound Sales</label>
        <queue>Inbound_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_From_Partner_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Lead From Partner</label>
        <queue>Lead_From_Partner</queue>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_to_Partners_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Lead to Partners</label>
        <queue>Lead_to_Partners</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>All_Partner_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_team_1_DE_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing team 1 (DE)</label>
        <queue>Marketing_team_1_DE</queue>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_team_2_FR_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing team 2 (FR)</label>
        <queue>Marketing_team_2_FR</queue>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_team_3_IT_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing team 3 (IT)</label>
        <queue>Marketing_team_3_IT</queue>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Markting_team_4_INT_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Markting team 4 (INT)</label>
        <queue>Markting_team_4_INT</queue>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>UPC_Lead_Score_Number__c</columns>
        <columns>UPC_Source__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>leadScoring__Total_Lead_Score__c</columns>
        <columns>UPC_Score_stars__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>My Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Outbound_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Outbound Sales</label>
        <queue>Outbound_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Solution_Sales_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Solution Sales</label>
        <queue>Solution_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>New_Lead_Locked_by_Zefix</fullName>
        <active>true</active>
        <businessProcess>UPC Lead Process</businessProcess>
        <label>New Lead - Locked by Zefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Partner_Lead</fullName>
        <active>true</active>
        <businessProcess>UPC Partner Lead Process</businessProcess>
        <label>New Partner Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Partner_Lead_Locked_by_Zefix</fullName>
        <active>true</active>
        <businessProcess>UPC Partner Lead Process</businessProcess>
        <label>New Partner Lead - Locked by Zefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPC_New_Lead</fullName>
        <active>true</active>
        <businessProcess>UPC Lead Process</businessProcess>
        <label>New Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>NX_Emploees_On_Conversion</fullName>
        <active>false</active>
        <description>Number of employees cant be empty on conversion. This is related to credit check that must run on conversion.</description>
        <errorConditionFormula>AND(
IsConverted,
ISBLANK( NumberOfEmployees)
)</errorConditionFormula>
        <errorMessage>Number os Employees is mandatory to convert a Lead.
Please update the Lead and Try Again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Gender_On_Conversion</fullName>
        <active>true</active>
        <description>Gender is mandatory on conversion. This information is mandatory for the credit check.</description>
        <errorConditionFormula>AND(
IsConverted,
ISPICKVAL( UPC_Gender__c , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>UPC_Gender__c</errorDisplayField>
        <errorMessage>Gender is Mandatory to Convert a Lead.
Please Update the Lead and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Last_Name_On_Conversion</fullName>
        <active>true</active>
        <description>In order to covnert a lead, the contact information must be known. Cant convert an Unknown lead.</description>
        <errorConditionFormula>AND(
IsConverted,
LastName=&quot;Unknown&quot;
)</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Contact information is mandatory when converting a lead.
Unknown Last Name is not acceptable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Company_Name_Readonly_Zefix</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(UPC_Zefix_Check_Context__c), 
NOT(ISNULL(UPC_Last_Zefix_Update__c )), 
NOT(UPC_Zefix_Not_Found__c), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
ISCHANGED( Company ) )</errorConditionFormula>
        <errorDisplayField>Company</errorDisplayField>
        <errorMessage>Company name is locked after it has been checked and found in Zefix</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Direct_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control phone format.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
NOT(ISBLANK(UPC_DPhone__c)), 
OR( 
AND( 
NOT(BEGINS(UPC_DPhone__c,&quot;+&quot;)), 
NOT(BEGINS(UPC_DPhone__c,&quot;0&quot;))), 
(NOT (REGEX( UPC_DPhone__c, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;))) 
))</errorConditionFormula>
        <errorDisplayField>UPC_DPhone__c</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Fax_Format</fullName>
        <active>true</active>
        <description>Used to control fax format.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
NOT(ISBLANK(Fax)), 
OR( 
AND( 
NOT(BEGINS(Fax,&quot;+&quot;)), 
NOT(BEGINS(Fax,&quot;0&quot;))), 
(NOT (REGEX( Fax, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;))) 
))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Mobile_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control mobile phone format.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
NOT(ISBLANK(MobilePhone)), 
OR( 
AND( 
NOT(BEGINS(MobilePhone,&quot;+&quot;)), 
NOT(BEGINS(MobilePhone,&quot;0&quot;))), 
(NOT (REGEX( MobilePhone, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;))) 
))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Phone_Format</fullName>
        <active>true</active>
        <description>Used to control phone format.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
NOT(ISBLANK(Phone)), 
OR( 
AND( 
NOT(BEGINS(Phone,&quot;+&quot;)), 
NOT(BEGINS(Phone,&quot;0&quot;))), 
(NOT (REGEX( Phone, &quot;[&lt;|&gt;]?[0-9,+, ]+&quot;))) 
))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone numbers must start with + or 0 and must contain only spaces and numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Swiss_DirectPhone_Length</fullName>
        <active>true</active>
        <description>Used to Control Swiss Phone Length for swiss numbers.</description>
        <errorConditionFormula>IF( 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
NOT(AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;) 
)) 
, 
OR( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041860.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=16 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041869.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=10, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=17 
) 
, 
AND( 
OR( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004198.*&quot;), 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004199.*&quot;) 
), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(00412|00413|00414|00415|00416|00417|00418|00419).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(0041860|0041869).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(004198|004199).*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(UPC_DPhone__c,1)=&quot;0&quot;,LEFT(SUBSTITUTE(UPC_DPhone__c,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(UPC_DPhone__c,LEN(UPC_DPhone__c)-1),UPC_DPhone__c),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13 
) 
) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>UPC_DPhone__c</errorDisplayField>
        <errorMessage>Direct Phone: invalid length. Normal phone number length is 9 digits with area code but without the leading 0. Exceptions are: 01 (3 to 6 digit), 0860 (12 digit), 0869 (6 to 13 digits). Mobile numbers are not allowed in this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Swiss_Fax_Length</fullName>
        <active>true</active>
        <description>Used to Control Swiss fax Length.</description>
        <errorConditionFormula>IF( 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
NOT(AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;) 
)) 
, 
OR( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00411.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=10 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041860.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=16 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041869.*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=10, 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&lt;=17 
) 
, 
AND( 
OR( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004198.*&quot;), 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004199.*&quot;) 
), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))&gt;=7 
) 
, 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(00412|00413|00414|00415|00416|00417|00418|00419).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(0041860|0041869).*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^(004198|004199).*&quot;), 
LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(Fax,1)=&quot;0&quot;,LEFT(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(Fax,LEN(Fax)-1),Fax),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13 
) 
) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax: invalid length or wrong number type. Normal fax number length is 9 digits with area code but without the leading 0. Exceptions are: 01 (3 to 6 digit), 0860 (12 digit), 0869 (6 to 13 digits). Mobile numbers are not allowed in this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Lead_Swiss_Mobile_Length</fullName>
        <active>true</active>
        <description>Used to Control the Mobile Length for swiss numbers.</description>
        <errorConditionFormula>IF( 
    !REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(MobilePhone ,1)=&quot;0&quot;,LEFT(SUBSTITUTE(MobilePhone ,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(MobilePhone ,LEN(MobilePhone )-1),MobilePhone ),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^0041.*&quot;), 
FALSE, 
NOT( 
AND( 
REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(MobilePhone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(MobilePhone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(MobilePhone,LEN(MobilePhone)-1),MobilePhone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^00417.*&quot;), 
!REGEX(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(MobilePhone,1)=&quot;0&quot;,LEFT(SUBSTITUTE(MobilePhone,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(MobilePhone,LEN(MobilePhone)-1),MobilePhone),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;),&quot;^004171.*&quot;), 
(LEN(SUBSTITUTE(SUBSTITUTE(IF(AND(LEFT(MobilePhone ,1)=&quot;0&quot;,LEFT(SUBSTITUTE(MobilePhone ,&quot; &quot;,&quot;&quot;),2)&lt;&gt;&quot;00&quot;),&quot;0041&quot;&amp;RIGHT(MobilePhone ,LEN(MobilePhone )-1),MobilePhone ),&quot; &quot;,&quot;&quot;),&quot;+&quot;,&quot;00&quot;))=13) 
)))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile Phone: invalid length or wrong number type. Mobile phone number length is 9 digits with area code but without the leading 0. Only mobile numbers are allowed in this field.</errorMessage>
    </validationRules>
</CustomObject>